--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 <!-- STRABUNEI SUS -->
 <div class="level">
     <div class="node" onclick="showPopup('Străbunica (mama)', 'albaștri', 'images.png')">Străbunica (mama)<br>(albaștri)</div>
-    <div class="node" onclick="showPopup('Străbunel (mama)', 'verzi', 'HPIM2232 copy.jpg')">Străbunel (mama)<br>(verzi)</div>
+    <div class="node" onclick="showPopup('Străbunel (mama)', 'verzi', 'HPIM2232 copy.JPG')">Străbunel (mama)<br>(verzi)</div>
     <div class="node" onclick="showPopup('Străbunica (tata)', 'albaștri', 'images.png')">Străbunica (tata)<br>(albaștri)</div>
     <div class="node" onclick="showPopup('Străbunel (tata)', 'albaștri', 'images1.png')">Străbunel (tata)<br>(albaștri)</div>
 </div>
